[gd_scene load_steps=2 format=3 uid="uid://cxb23v0533q3c"]

[ext_resource type="Script" uid="uid://f7ie3al8udlf" path="res://scripts/ui.gd" id="1_xmm75"]

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xmm75")

[node name="InteractionPrompt" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="DialoguePanel" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ObservationPanel" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="Panel" type="Panel" parent="ObservationPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="ObjectImage" type="TextureRect" parent="ObservationPanel/Panel"]
layout_mode = 0
offset_left = -87.0
offset_top = -41.0
offset_right = -47.0
offset_bottom = -1.0

[node name="ObjectName" type="Label" parent="ObservationPanel/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = -43.0
offset_right = 65.0
offset_bottom = -20.0

[node name="ObjectDescription" type="RichTextLabel" parent="ObservationPanel/Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = -4.0
offset_right = 80.0
offset_bottom = 36.0

[node name="OptionsMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
focus_mode = 2

[node name="CollectionUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="GridContainer" type="GridContainer" parent="CollectionUI"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
offset_left = 18.0
offset_top = 19.0
offset_right = 384.0
offset_bottom = 279.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 5

[node name="InfoPanel" type="Control" parent="CollectionUI"]
anchors_preset = 0
offset_left = 442.0
offset_top = 14.0
offset_right = 626.0
offset_bottom = 344.0

[node name="TextureRect" type="TextureRect" parent="CollectionUI/InfoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -56.5
offset_right = 56.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CollectionUI/InfoPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CollectionUI/InfoPanel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = 173.0
offset_right = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="crosshair" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0, 0, 0.392157)
